@@ -1,3 +1,9 @@
+2020-02-07  Allen D. Ball  <ball@hcf.dev>
+
+	* src/main/java/ball/maven/wagon/providers/S3Wagon.java:
+	Add support to allow setting <profile/> and/or <region/> in
+	settings.xml:<server><configuration/></server>.
+
 2020-02-04  Allen D. Ball  <ball@hcf.dev>
 
 	* Added SLF4J instrumentation.
